--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <br>BOGOTA COLOMBIA</br>
         <h3>MAS INFORMACION 2676730</h3>
         <br> UN GUSTO ATENDERLO </HEAD>br>
-        <a href="C:\REPOSITORIOLOCAL\REPOSITORY-WILLI\fase2\design.html">Enlace a otra página</a>
+        <a href="https://github.com/willi6447/DSW-WilintonVillarreal/edit/main/index.html">Enlace a otra página</a>
 
         </body>
 
