--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
          <BODY>
     
         <TITLE>Proyecto de sitio Web Año 2021 1 PERIODO 16-01</TITLE>
-        <h3>WILINTON VILLARREAL</H3>
+        <h3>WILINTON VILLARREAL NIETO</H3>
         <P>PROGRAMA INGENIERA DE SISTEMAS </P>
         <p>2021</p>
         <br>BOGOTA COLOMBIA</br>
         <h3>MAS INFORMACION 2676730</h3>
         <br> UN GUSTO ATENDERLO </HEAD>br>
-        <a href="https://github.com/willi6447/DSW-WilintonVillarreal/edit/main/index.html">Enlace a otra página</a>
+        <a href="C:\REPOSITORIOLOCAL\REPOSITORY-WILLI\fase2\design.html">Enlace a otra página</a>
 
         </body>
 
