--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">
     <TITLE>Etiquetas Básicas de HTML,
         atributos y valores</TITLE>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="estilos.css">
     </HEAD>
     <BODY>
     <HEADER>
