--- a/PORTADA.html
+++ b/PORTADA.html
@@ -9,8 +9,9 @@
         <p>2021</p>
         <br>BOGOTA COLOMBIA</br>
         <h3>MAS INFORMACION 2676730</h3>
-        <br> UN GUSTO ATENDERLO </HEAD>br>
-        <a href="C:\REPOSITORIOLOCAL\REPOSITORY-WILLI\fase2\design.html">Enlace a otra página</a>
+        <br> UN GUSTO ATENDERL</br>
+        <br>PRESENTACION FASE 3 CONSTRUCIION Y DISEÑO</HEAD>br>
+        <a href="index.html">Enlace a otra página</a>
 
         </body>
 
