--- a/RecursoDigitales.html
+++ b/RecursoDigitales.html
@@ -30,7 +30,7 @@
             </footer>
             <a href="file:///C:/REPOSITORIOLOCAL/REPOSITORY-WILLI/fase3" actividad fase 3 </a>
                 <article><h1>VIDEO MULTIMEDIA EXPLICACION HTML</h1>  
-                    <p><iframe src="C:\REPOSITORIOLOCAL\DSW-WilintonVillarreal\fase3\videopropio.mp4" width="640" height="490" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></p>
+                    <p><iframe src="https://youtu.be/NU7A4TAZA0g" width="640" height="490" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></p>
                      <p>Referencia Apa."https://www.youtube.com/watch?v=hRhya9CT8KI"Autoria propia"</p>
                     </article>
                 <article>
@@ -43,7 +43,7 @@
                 <Aside
                     <p><b><H3>QUE ES HTML Y LA WEB</H3></b> </p>
                  <article><h1>VIDEO MULTIMEDIA EXPLICACION</h1>
-                </p><iframe src="Queeshtmlylaweb.mp4" width="440" height="390" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></p>
+                </p><iframe src="https://youtu.be/eAI-FskjKFo" width="440" height="390" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></p>
                  <p>Referencia Apa."https://www.youtube.com/watch?v=10GHKjgQIR0"</p>  
                     C:\REPOSITORIOLOCAL\DSW-WilintonVillarreal\fase3\
                 <H2>AUDIO EN HTML 5 </H2>
