--- a/RecursoDigitales.html
+++ b/RecursoDigitales.html
@@ -31,13 +31,13 @@
             <a href="file:///C:/REPOSITORIOLOCAL/REPOSITORY-WILLI/fase3" actividad fase 3 </a>
                 <article><h1>VIDEO MULTIMEDIA EXPLICACION HTML</h1>  
                     ></article></div></p>
-                    <div align="center"> <src="Queeshtmlylaweb.mp4.mp4">width="640" height="490" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></div> 
+                    <div <src="Queeshtmlylaweb.mp4.mp4">width="640" height="490" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></div> 
                     <p>Referencia Apa."https://www.youtube.com/watch?v=hRhya9CT8KI"Autoria propia"</p>
                     </article>
                 <article>
                    
-                 <H2>AUDIO EN HTML 5 </H2>
-                 <audio> autoplay src="audiohtml.mp3"controls="controls">
+                 <H3>AUDIO EN HTML 5 </H3>
+                 <audio autoplay src="audiohtml.mp3"controls="controls">
 
                  </audio>  
                 </article>
