--- a/RecursoDigitales.html
+++ b/RecursoDigitales.html
@@ -31,7 +31,7 @@
             <a href="file:///C:/REPOSITORIOLOCAL/REPOSITORY-WILLI/fase3" actividad fase 3 </a>
                 <article>
                     <h1>VIDEO MULTIMEDIA EXPLICACION HTML</h1>  
-                 <div align="center"> <src="Queeshtmlylaweb.mp4.mp4"</div> 
+                 <div align="center" <src="Queeshtmlylaweb.mp4.mp4"</div> 
                     <p>Referencia Apa."https://www.youtube.com/watch?v=hRhya9CT8KI"Autoria propia"</p>
                     </article>
                 <article>
