--- a/RecursoDigitales.html
+++ b/RecursoDigitales.html
@@ -48,7 +48,7 @@
                     <p><b><H3>QUE ES HTML Y LA WEB</H3></b> </p>
                  <article><h1>VIDEO MULTIMEDIA EXPLICACION</h1>
                 </p><iframe src="videopropio.mp4" width="440" height="390" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></p></article></p>
-                 <p>Referencia Apa."https://www.youtube.com/watch?v=10GHKjgQIR0"</p>  
+                 <p>Referencia Apa."autoria propia"</p>  
                     C:\REPOSITORIOLOCAL\DSW-WilintonVillarreal\fase3\
                 
                  
