--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
            A veces, la información provista por estos elementos semánticos, es usada por diferentes tipos de agentes de usuario <br> 
             (navegadores, motores de búsqueda, procesadores de documentos, etc) para extraer información adicional acerca del documento y sus partes.</br></p>
         <h3> red social de facebook " Audios Modulos unad" </h3>
-                      </p><iframe src="https://www.facebook.com/AudioModulosUnad/">width="240" height="100" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe></iframe></p></article></p>
+                     <a href=”https://www.facebook.com/AudioModulosUnad/”>UNAD Audios Modulos</a>
                       <div align="center"><img src="facebookunad.jpg"></div>
     </article>    
         </footer>
