--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
            A veces, la información provista por estos elementos semánticos, es usada por diferentes tipos de agentes de usuario <br> 
             (navegadores, motores de búsqueda, procesadores de documentos, etc) para extraer información adicional acerca del documento y sus partes.</br></p>
         <h3> red social de facebook " Audios Modulos unad" </h3>
-                     <a href=”https://www.facebook.com/AudioModulosUnad/”>UNAD Audios Modulos</a>
-                      <div align="center"><img src="facebookunad.jpg"></div>
+                     <a href=”https://www.facebook.com/AudioModulosUnad/”_target=”_blank”> UNAD Audios Modulos</a>
+                        <div align="center"><img src="facebookunad.jpg"></div>
     </article>    
         </footer>
         <a href="file:///C:/REPOSITORIOLOCAL/REPOSITORY-WILLI/fase2" actividad fase 2 </a>
