--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         <p><br>su propósito es el de proveer significados semánticos a la porción de documento que afectan. 
            A veces, la información provista por estos elementos semánticos, es usada por diferentes tipos de agentes de usuario <br> 
             (navegadores, motores de búsqueda, procesadores de documentos, etc) para extraer información adicional acerca del documento y sus partes.</br></p>
-        <h3> red social de facebook " Audios Modulos unad" </h3>
-        <h4>https://www.facebook.com/AudioModulosUnad/</h4>
+        <h3> red social de facebook " Audios Modulos unad" https://www.facebook.com/AudioModulosUnad/ </h3>
+        
                         <div align="center"><img src="facebookunad.jpg"></div>
     </article>    
         </footer>
