--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
            A veces, la información provista por estos elementos semánticos, es usada por diferentes tipos de agentes de usuario <br> 
             (navegadores, motores de búsqueda, procesadores de documentos, etc) para extraer información adicional acerca del documento y sus partes.</br></p>
         <h3> red social de facebook " Audios Modulos unad" https://www.facebook.com/AudioModulosUnad/ </h3>
+        <a href="https://google.com" target="_blank">Ir a Google</a>
         
                         <div align="center"><img src="facebookunad.jpg"></div>
     </article>    
