--- a/HTML.html
+++ b/HTML.html
@@ -48,12 +48,10 @@
         <H3>"INTRODUCCION A HTML "</H3>
         <p><h4>La versión definitiva de HTML5 se publicó en Octubre de 2014.
 
-                <p><h4>HTML es el que permite que un navegador sepa lo que esta leyendo y como debe mostrarlo</h4></p>
-                <p><h4>HTML es el que permite que un navegador sepa lo que esta leyendo y como debe mostrarloal usuario.</h4></p>
-                 <p><h4>De esta forma, los navegadores saben donde deben mostrar el texto, donde va una imagen
-                 o donde hay un enlace.</h4></p>
+                 <p><h4>HTML es el que permite que un navegador sepa lo que esta leyendo y como debe mostrarlo al usuario.</h4></p>
+                 <p><h4>De esta forma, los navegadores saben donde deben mostrar el texto, donde va una imagen o donde hay un enlace.</h4></p>
                  <p><h4>Para escribir páginas web en HTML utilizarás etiquetas rodeadas por los simbolos <,>por ejemplo "<head>".</H4></P> 
-                 <p><h4>   Estos elementos tienen dos propiedades básicas: atributos y contenido.</h4> </p>
+                 <p><h4>Estos elementos tienen dos propiedades básicas: atributos y contenido.</h4> </p>
                  <p><h4>La mayoría de elementos necesitan además, una etiqueta de cierre.</h4> </p>
                  <p>Referencia Apa."https://webdesdecero.com/tutorial-html5-introduccion/"</p>
     </article>
