--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="col-7">
               <ul>
                 <h2>INTRODUCCION</h2>
-                <iframe src="C:\REPOSITORIOLOCAL\REPOSITORY-WILLI\fase3\videoHtml.mp4" width="710" height="490"
+                <iframe src="videoHtml.mp4" width="710" height="490"
                   style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;
               web-share"></iframe></iframe>
             </div>
