--- a/HTML1.html
+++ b/HTML1.html
@@ -49,7 +49,7 @@
 
         <link rel="stylesheet" href="ulib/css/formav2.css?v=2" type="text/css" />
         </head>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="estilos.css">
         <style>
             header {
                 /*enable flex mode. */
@@ -87,7 +87,7 @@
                     <section class="col-7">
                         <article>
                             <h2>VIDEO MULTIMEDIA</h2>
-                            </p><iframe src="C:\REPOSITORIOLOCAL\REPOSITORY-WILLI\fase3\videoHtml.mp4" width="740"
+                            </p><iframe src="videoHtml.mp4" width="740"
                                 height="490" style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                                 allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture;
                                 web-share"></iframe></iframe>
