--- a/multimedia.html
+++ b/multimedia.html
@@ -3,7 +3,7 @@
 
     <body background="azul-claro.jpg" <HEAD>
         <META CHARSET="UTF-8">
-        <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <TITLE>Etiquetas Básicas de HTML,
             atributos y valores</TITLE>
         <link rel="stylesheet" href="css/estilos.css">
@@ -22,7 +22,7 @@
             <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
                 integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0"
                 crossorigin="anonymous">
-            <link rel="stylesheet" href="css/estilos.css">
+            <link rel="stylesheet" href="estilos.css">
         </head>
 
         <BODY>
@@ -75,7 +75,6 @@
                     <p> </p>
                     <p>.</p>
                     </footer>
-                    <a href="file:///C:/REPOSITORIOLOCAL/REPOSITORY-WILLI/fase3" actividad fase 3 </a>
                         <div align="center"><img src="imgcss.jpg" width="840" height="390"
                                 style="border:none;overflow:hidden" scrolling="no" frameborder="0"
                                 allowfullscreen="true"
