--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <body background="azul-claro.jpg" <HEAD>
     <META CHARSET="UTF-8">
     <META HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EDGE">
-    <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">
     <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <div class="container">
       <img src="LOGOUNAD.jpg">
     </div>
@@ -51,7 +50,7 @@
         <cente> ETIQUETAS BASICAS DE HTML, ATRIBUTOS Y VALORES</cente>
       </h2>
       </head>
-      <link rel="stylesheet" href="css/estilos.css">
+      <link rel="stylesheet" href="estilos.css">
       <H3>LENGUAJE HTML, DEFINICION Y CONCEPTO</H3>
       <h5>
         “HTML es un lenguaje de marcado que se utiliza para el desarrollo de páginas de
