--- a/HTML1.html
+++ b/HTML1.html
@@ -4,10 +4,10 @@
     <body background="azul-claro.jpg" <HEAD>
         <META CHARSET="UTF-8">
         <META HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EDGE">
-        <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">
         <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <div class="container">
+            <link rel="stylesheet" href="estilos.css">
             <img src="LOGOUNAD.jpg">
             <nav>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -49,7 +49,7 @@
 
         <link rel="stylesheet" href="ulib/css/formav2.css?v=2" type="text/css" />
         </head>
-        <link rel="stylesheet" href="estilos.css">
+        
         <style>
             header {
                 /*enable flex mode. */
