--- a/multimedia.html
+++ b/multimedia.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <TITLE>Etiquetas Básicas de HTML,
             atributos y valores</TITLE>
-        <link rel="stylesheet" href="css/estilos.css">
+        <link rel="stylesheet" href="estilos.css">
 
         <head>
             <style>
