--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <body background="azul-claro.jpg" <HEAD>
     <META CHARSET="UTF-8">
     <META HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EDGE">
+     <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">
     <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <div class="container">
