--- a/multimedia.html
+++ b/multimedia.html
@@ -3,6 +3,7 @@
 
     <body background="azul-claro.jpg" <HEAD>
         <META CHARSET="UTF-8">
+        <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">    
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <TITLE>Etiquetas Básicas de HTML,
             atributos y valores</TITLE>
