--- a/HTML1.html
+++ b/HTML1.html
@@ -148,7 +148,7 @@
                             </p>
                             <p>
                                 <align="right"><img
-                                        src="ESTRUCTURA PAG.JPG">
+                                        src="ESTRUCTURA PAG.jpg">
                                     </align>
                                     <p>Referencia Apa."https://www.eniun.com/html5-estructura-basica-elementos-semanticos/"</p>
                 </div>
