--- a/HTML1.html
+++ b/HTML1.html
@@ -148,7 +148,9 @@
                             </p>
                             <p>
                                 <align="right"><img
-                                        src="ESTRUCTURA PAG.jpg">
+                                        src="ESTRUCTURA PAG.jpg" width="740" height="490"
+                                        style="border:none;overflow:hidden" scrolling="no" frameborder="0"
+                                        allowfullscreen="true" >
                                     </align>
                                     <p>Referencia Apa."https://www.eniun.com/html5-estructura-basica-elementos-semanticos/"</p>
                 </div>
