--- a/HTML1.html
+++ b/HTML1.html
@@ -12,7 +12,7 @@
             <nav>
                 <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
-                        <a class="navbar-brand" href="Cuestinario1.html">INICIO</a>
+                        <a class="navbar-brand" href="index.html">INICIO</a>
                         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                             data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                             aria-expanded="false" aria-label="Toggle navigation">
