--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <DOCTYPE HTML>
   <HTML LANG="ESP">
-
   <body background="azul-claro.jpg" <HEAD>
     <META CHARSET="UTF-8">
     <META HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EDGE">
      <META NAME="VIEWPORT" CONTENT="WIDTH=DEVICE-WIDTH, INITIAL-SCALE=1.0">
     <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">  
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <div class="container">
       <link rel="stylesheet" href="estilos.css">
       <img src="LOGOUNAD.jpg">
     </div>
+     
     <nav>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
