--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
      
     <nav>
+      <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">INICIO</a>
@@ -81,6 +82,7 @@
 
       <BODY>
         <header <div class="container">
+        <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4"></div>
           <div class="row justify-content-start">
             <div class="col-7">
               <ul>
@@ -106,6 +108,7 @@
 
         <main class="container">
           <div class="row">
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <section class="col-7">
               <article>
                 <h1>Sitio web para el aprendizaje de las etiquetas semanticas, listas y enlaces </h1>
@@ -125,6 +128,7 @@
               </article>
 
             </section>
+            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4"></div>
             <aside class="col-4">
               <img src="FACEDEVELOPERS.jpg" width="740" height="490" style="border:none;overflow:hidden" scrolling="no"
                 frameborder="0" allowfullscreen="true"
