--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <DOCTYPE HTML>
   <HTML LANG="ESP">
-  <body background="azul-claro.jpg" <HEAD>
+  <body background="azul-claro.jpg" 
+  <HEAD>
     <META CHARSET="UTF-8">
     <META HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EDGE">
      <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">  
-    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
     <div class="container">  
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
       <link rel="stylesheet" href="estilos.css">
       <img src="LOGOUNAD.jpg">
     </div>
