--- a/HTML1.html
+++ b/HTML1.html
@@ -1,15 +1,13 @@
 <DOCTYPE HTML>
     <HTML LANG="ESP">
 
-    <body background="azul-claro.jpg" <HEAD>
+    <body background="azul-claro.jpg" 
+     <HEAD>
         <META CHARSET="UTF-8">
-        <META HTTP-EQUIV="X-UA-COMPATIBLE" CONTENT="IE=EDGE">
         <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <div class="container">
-            <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-            <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
             <link rel="stylesheet" href="estilos.css">
             <img src="LOGOUNAD.jpg">
             <nav>
@@ -66,9 +64,7 @@
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
             integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/estilos.css">
-
-        </HEAD>
+       </HEAD>
 
         <BODY>
             <header>
