--- a/index.html
+++ b/index.html
@@ -70,6 +70,33 @@
           /*alinea los elementos en el centro */
           align-items: center;
         }
+        /* Portrait and Landscape */
+          @media screen 
+              and (device-width: 480px) 
+              and (device-height: 800px) {
+
+          }
+
+/* Portrait */
+        @media screen 
+            and (device-width: 480px) 
+            and (device-height: 800px)  
+            and (orientation: portrait) {
+
+        }
+
+/* Landscape */
+        @media screen 
+             and (device-width: 480px) 
+             and (device-height: 800px) 
+             and (orientation: landscape) {
+
+        }
+/*Escritorio*/
+        @media (min-width: 1199.98px)  {
+             body{background: red;}
+        }
+
       </style>
 
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
