--- a/multimedia.html
+++ b/multimedia.html
@@ -54,17 +54,12 @@
                                     <li class="nav-item">
                                         <a class="nav-link"
                                             href="https://docs.google.com/forms/d/e/1FAIpQLSfY43ywgyINOvhTgX05FnQ5N1ujwGtmLMSIfpCBzQoR0rsWkQ/viewform?usp=sf_link"
-                                            width="800" height="420" frameborder="0" marginheight="0"
-                                            background="azul-claro.jpg"
+                                            width="800" height="420" frameborder="0" marginheight="0
                                             marginwidth="0">Cargando…</iframe>">CUESTIONARIO HTML</a>
                                     </li>
 
                                 </ul>
-                                <form class="d-flex">
-                                    <input class="form-control me-2" type="search" placeholder="Search"
-                                        aria-label="Search">
-                                    <button class="btn btn-outline-success" type="submit">Search</button>
-                                </form>
+                                
                             </div>
                         </div>
                     </NAV>
