--- a/PORTADA.html
+++ b/PORTADA.html
@@ -11,7 +11,7 @@
         <h3>MAS INFORMACION 2676730</h3>
         <br> UN GUSTO ATENDERLO </HEAD>br>
         <h3>INGRESO A PAGINAS FASE3</h3>
-        <a href=index.html">Enlace a otra página</a>
+        <a href="index.html">Enlace a otra página</a>
 
         </body>
 
