--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+              <button class="<h4><a href="https://google.com">" type="submit">Search</button>
+              Ir a Google</a></h4>
+              /*btn btn-outline-success*/
             </form>
           </div>
         </div>
@@ -131,7 +133,7 @@
               <h4>
                 <p><a href="https://developers.facebook.com/">Estamos en Facebook <col< /a>
               </h4>
-              <h4></h4><a href="https://google.com">Ir a Google</a></h4>
+              <h4><a href="https://google.com">Ir a Google</a></h4>
               </p>
               <p>
                 <align="right"><b>
