--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="<h4><a href="https://google.com">" type="submit">Search</button>
+              <button class="https://google.com" type="submit">Search</button>
               Ir a Google</a></h4>
               /*btn btn-outline-success*/
             </form>
