--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
             </ul>
             <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="https://google.com" type="submit">Search</button>
-              Ir a Google</a></h4>
-              /*btn btn-outline-success*/
+              <button class="btn btn-outline-success" type="submit">Search</button>
+         
             </form>
           </div>
         </div>
