--- a/HTML1.html
+++ b/HTML1.html
@@ -6,7 +6,7 @@
         <META CHARSET="UTF-8">
         <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-        <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta name="viewport" content="width=device-width, minimum-scale=*.0, maximum-scale=1.0" />
         <div class="container">
             <link rel="stylesheet" href="estilos.css">
             <img src="LOGOUNAD.jpg">
