--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <META CHARSET="UTF-8">
     <title>ACCESIT - Universidad Nacional Abierta y a Distancia UNAD</title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" />
-    /*<meta name = "viewport" content = "width = device-width, initial-scale = 1.0">*/
+    <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <div class="container">  
        <link rel="stylesheet" href="estilos.css">
        <img src="LOGOUNAD.jpg">
